crates/cli/tests/snapshots/snapshot_tests__pr_comment_gitlab.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
<!-- fallow-id: fallow-results -->
### Fallow dead-code report

Found **15** findings.

<details>
<summary>Details</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/unused-dependency` | `package.json`:5 | Package 'lodash' is in dependencies but never imported |
| minor | `fallow/unused-dev-dependency` | `package.json`:5 | Package 'jest' is in devDependencies but never imported |
| minor | `fallow/unused-optional-dependency` | `package.json`:5 | Package 'fsevents' is in optionalDependencies but never imported |
| minor | `fallow/type-only-dependency` | `package.json`:8 | Package 'zod' is only imported via type-only imports \(consider moving to devDependencies\) |
| minor | `fallow/test-only-dependency` | `package.json`:12 | Package 'msw' is only imported by test files \(consider moving to devDependencies\) |
| major | `fallow/circular-dependency` | `src/a.ts`:3 | Circular dependency: src/a.ts → src/b.ts |
| major | `fallow/unresolved-import` | `src/app.ts`:3 | Import './missing-module' could not be resolved |
| major | `fallow/unlisted-dependency` | `src/cli.ts`:2 | Package 'chalk' is imported but not listed in package.json |
| major | `fallow/duplicate-export` | `src/config.ts`:15 | Export 'Config' appears in multiple modules |
| major | `fallow/unused-file` | `src/dead.ts`:1 | File is not reachable from any entry point |
| major | `fallow/unused-enum-member` | `src/enums.ts`:8 | Enum member 'Status.Deprecated' is never referenced |
| major | `fallow/unused-class-member` | `src/service.ts`:42 | Class member 'UserService.legacyMethod' is never referenced |
| major | `fallow/unused-type` | `src/types.ts`:5 | Type export 'OldType' is never imported by other modules |
| major | `fallow/duplicate-export` | `src/types.ts`:30 | Export 'Config' appears in multiple modules |
| major | `fallow/unused-export` | `src/utils.ts`:10 | Export 'helperFn' is never imported by other modules |

</details>

Generated by fallow.
